welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:-9: error: Unmatched closing brace '}' ignored here
	}
        ^Array2:-8: error: illegal start of statement (no modifiers allowed here)
	override def setY(i: Int)  { 
        ^Array2:-4: error: illegal start of statement (no modifiers allowed here)
	override def setPos(x: Int, y:Int)  { 
        ^Array2:2: error: illegal start of statement (no modifiers allowed here)
override def run() {
^Array2:14: error: Unmatched closing brace '}' ignored here
}
^